--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 
 *,
 body {
@@ -10,6 +10,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   position: relative;
+  font-family: 'Source Serif 4', serif;
 }
 
 section {
